# digital-gate-driver

./: .gitignore  pyproject.toml
documentation/: digital-gate-driver.ipynb
documentation/data/: lab3_9v_gate.csv
fpga/: makefile
fpga/checkpoints/: place.checkpoint  route.checkpoint  synthesis.checkpoint
fpga/hdl/: components.mk
fpga/hdl/components/: main.sv  pwm.sv  pwm_control.sv  pwm_tb.sv  pwm_top.sv
fpga/verif/py/: cocotb_runner.py
fpga/verif/py/components/: test_pwm.py
fpga/xdc/components/: pwm_tb.xdc  pwm_top.xdc
pcb/: digital-gate-driver.kicad_pcb  digital-gate-driver.kicad_prl  digital-gate-driver.kicad_pro  digital-gate-driver.kicad_sch  digital_gate_driver.dxf
pcb/digital-gate-driver-out/: digital-gate-driver-B_Cu.gbl  digital-gate-driver-B_Mask.gbs  digital-gate-driver-B_Paste.gbp  digital-gate-driver-B_Silkscreen.gbo  digital-gate-driver-Edge_Cuts.gm1  digital-gate-driver-F_Cu.gtl  digital-gate-driver-F_Mask.gts  digital-gate-driver-F_Paste.gtp  digital-gate-driver-F_Silkscreen.gto  digital-gate-driver-NPTH-drl_map.gbr  digital-gate-driver-NPTH.drl  digital-gate-driver-PTH-drl_map.gbr  digital-gate-driver-PTH.drl
pcb/lib/: digital-gate-driver.kicad_sym
pcb/lib/3d/: 436500418.step
pcb/lib/digital-gate-driver.pretty/: MOLEX_436500418.kicad_mod  TP_SCOPE.kicad_mod  TP_SMD.kicad_mod
pcb/lib/footprint/: MOLEX_436500418.kicad_mod
scripts/: setup.sh
util/: lab_util.py
